using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    //player
    public static string WALK_ANIMATION_PARAMETER = "isWalking";
    public static string ISGROUND_ANIMATION_PARAMETER = "isGrounded";
    public static string YVELOCITY_ANIMATION_PARAMETER = "yVelocity";
    public static string WALLSLIDE_ANIMATION_PARAMETER = "isWallSliding";
    public static string CANATTACK_ANIMATION_PARAMETER = "canAttack";
    public static string ATTACK1_ANIMATION_PARAMETER = "attack1";
    public static string FIRSTATTACK_ANIMATION_PARAMETER = "firstAttack";
    public static string ISATTACKING_ANIMATION_PARAMETER = "isAttacking";
    public static string PLAYERONLEFT_ANIMATION_PARAMETER = "playerOnLeft";

    public static string IDLE_ANIMATION_PARAMETER = "idle";
    public static string JUMP_ANIMATION_PARAMETER = "jump";
    public static string ROLL_ANIMATION_PARAMETER = "roll";
    public static string ATK1_ANIMATION_PARAMETER = "attack1";

    //enemy
    public static string HURT_ANIMATION_PARAMETER = "hurt";
    public static string DEAD_ANIMATION_PARAMETER = "dead";
}
